# gvirtus-kai

./: .gitignore  README.md  run_gvirtus_backend.sh  sample-feature-node-feature-rule.yaml
app/: Dockerfile  app.yaml  cudart_example.cu  full_example.cu
deprecated-gvirtus-role-detector/: Dockerfile  detect-gvirtus.sh  docker_build_push.sh  docker_run.sh
docker/: docker-compose.yaml  properties.json
docker/frontend/: Dockerfile  client.py  full_example.py  (+2 more)
docs/: components.md  journal.md  k3s-cheatsheet.md  roadmap.md
gvirtus-backend/: gvirtus-backend-ds.yaml  gvirtus-backend-ds.yaml.bk  gvirtus-backend-svc.yaml  tests
gvirtus-device-plugin/: Dockerfile  go.mod  go.sum  gvirtus-device-plugin.yaml  main.go  main.old.go
gvirtus-example-app/: Dockerfile  app.yaml
gvirtus-labeler/: Dockerfile  gvirtus-labeler-ds.yaml  gvirtus-labeler-sa-rbac.yaml  labeler.py
gvirtus-lib/: Dockerfile
gvirtus-mutating-webhook/: Dockerfile  gvirtus-mutating-webhook-configuration.yaml  gvirtus-webhook-deployment.yaml  run_fake_admissionreview.sh  server.py
gvirtus-ns/: gvirtus-system-ns.yaml
gvirtus-role-detector/: gvirtus-all.yaml
gvirtus-tests/: CMakeLists.txt  CMakeLists.txt.bk  Dockerfile  gvirtus-tests.yaml  test_curand.cu
gvirtus-webhook/: gvirtus-mutating-webhook-configuration.yaml  gvirtus-webhook-deployment.yaml  gvirtus-webhook-sa-rbac.yaml  gvirtus-webhook-svc.yaml  mutating-webhook-configuration.yaml  rbac-cluster-role.yaml  run_fake_admissionreview.sh  server.py  webhook-deployment.yaml  webhook-service.yaml
old-device-plugin/: Dockerfile  go.mod  go.sum  gvirtus-gpu-plugin.yaml  main.go
scripts/: run_gvirtus_backend.sh
(+4 files in other folders)
